# cpp-playground

./: CMakeLists.txt  LICENSE  README.md
01_hello_world/: CMakeLists.txt
01_hello_world/src/: main.cpp
02_odd_even/: CMakeLists.txt
02_odd_even/src/: main.cpp
03_armstrong/: CMakeLists.txt
03_armstrong/src/: armstrong_main.cpp
04_display_book/: CMakeLists.txt
04_display_book/src/: main_books.cpp
06_read_file/: CMakeLists.txt
06_read_file/src/: main_bookread.cpp
07_matrix_to_console/: CMakeLists.txt
07_matrix_to_console/src/: main_matrix_console.cpp
08_lib_ini_read_book/: CMakeLists.txt
08_lib_ini_read_book/src/: main_ini_bookread.cpp
10_oop_func_args_book/: CMakeLists.txt
10_oop_func_args_book/include/: book.h
10_oop_func_args_book/src/: book.cpp  book_pass_main.cpp
11_oop_book_auth/: CMakeLists.txt
11_oop_book_auth/include/: alien_author.h  author.h  book.h
11_oop_book_auth/src/: alien_author.cpp  author.cpp  book.cpp  main_book_auth.cpp
15_game_of_life/: CMakeLists.txt
20_sfml_lib_sample/: CMakeLists.txt
20_sfml_lib_sample/include/: sfml_app.h
20_sfml_lib_sample/src/: main.cpp  sfml_app.cpp
21_sample_feline/: CMakeLists.txt
21_sample_feline/include/: abstract_feline.h  feline.h  lion.h
21_sample_feline/src/: abstract_feline.cpp  feline.cpp  lion.cpp
22_sample_kitty_exe/: CMakeLists.txt
22_sample_kitty_exe/include/: kitty.h
22_sample_kitty_exe/src/: kitty.cpp  main.cpp
24_shared_feline_lib/: CMakeLists.txt
24_shared_feline_lib/include/: build_opts_feline.h  constants.h  feline.h
24_shared_feline_lib/src/: feline.cpp
25_shared_lion_lib/: CMakeLists.txt
25_shared_lion_lib/include/: lion.h
25_shared_lion_lib/src/: lion.cpp
26_shared_cats/: CMakeLists.txt
26_shared_cats/include/: cat_factory.h  domestic_cat.h  feline_factory.h  feline_reader.h  kitty.h
26_shared_cats/src/: cat_factory.cpp  domestic_cat.cpp  feline_factory.cpp  feline_reader.cpp  kitty.cpp  main.cpp
27_plugin_lion/: CMakeLists.txt
27_plugin_lion/include/: build_opts_lion.h  lion.h
27_plugin_lion/src/: lion.cpp
28_plugin_lynx/: CMakeLists.txt
28_plugin_lynx/include/: build_opts_lynx.h  lynx.h
28_plugin_lynx/src/: lynx.cpp
29_plugin_based_exe/: CMakeLists.txt
29_plugin_based_exe/include/: domestic_cat.h  feline_factory.h
29_plugin_based_exe/include/guslib/: guslib_platform.h  guslib_version.hpp  guslibbuildopts.h
29_plugin_based_exe/include/guslib/common/: simpleexception.h  singleton.hpp
29_plugin_based_exe/include/guslib/system/: custommutex.h  dynamiclib.h  dynamiclibmanager.h  systemwindowsfwd.h
29_plugin_based_exe/include/guslib/util/: plugin.h  plugin_manager.h  stringutil.h
29_plugin_based_exe/src/: feline_factory.cpp  feline_reader.cpp  main.cpp
29_plugin_based_exe/src/guslib/common/: simpleexception.cpp
29_plugin_based_exe/src/guslib/system/: dynamiclib.cpp  dynamiclibmanager.cpp
29_plugin_based_exe/src/guslib/util/: stringutil.cpp
Curs/Aplicatie_Curs_02/: Aplicatie_Curs_02.sln  Aplicatie_Curs_02.vcxproj  HeaderCurs2.h  SourceCurs2.cpp  main.cpp
Curs/Aplicatie_Curs_3/: Aplicatie_Curs_3.sln  Aplicatie_Curs_3.vcxproj  Source.cpp
Curs/Aplicatie_curs_4/: Aplicatie_curs_4.sln  Aplicatie_curs_4.vcxproj  ClassHeader.h  ClassSource.cpp  main.cpp
Curs/ClassLib/: ClassHeader.h  ClassLib.vcxproj
assignments/: assignment_1.md  assignment_2.md  assignment_3.md  assignment_4.md  assignment_5.md  q-and-a.md  sfml-linux-setup.md
data/: 26_shared_cats.ini  29_plugin_based_cats.ini  ermahgerd_berks.ini  ermahgerd_berks.txt
